--- a/styleDados.css
+++ b/styleDados.css
@@ -1,17 +1,32 @@
-.dados{
-    margin-left: 2%;
-    margin-right: 2%;
-    text-align: center;
-    font-size: 1.3em;
-}
-
 .titles{
     text-align: center;
     margin-top: 1%;
     margin-bottom: 1%;
 }
 
-*{
-    color: black;
+.boxDados{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
+.headerTable{
+    background-color: #007bff;
+}
+
+.titleDado{
+    text-align: center;
+    font-weight: bold;
+    margin-right: 3%;
+    font-size: 1.2em;
+}
+
+#tabela{
+    max-width: 580px;
+}
+
+@media (max-width: 580px){
+    #tabela{
+        overflow: scroll;
+    }
+}
